// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FavouriteStarButton renders correctly 1`] = `
<div>
  <span
    aria-label="Add favorite"
    class="glyphicon glyphicon-star-empty"
    data-testid="test"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`components/FavouriteStarButton renders enabled with onClick 1`] = `
<div>
  <span
    aria-label="Remove favorite"
    class="glyphicon glyphicon-star"
    data-testid="test"
    role="button"
    tabindex="0"
  />
</div>
`;
